# EECS348_Lab-7

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  fact.c  fact.h  factorial.c  factorial.h  fibonacci.c  fibonacci.h  football.c  football.h  lab.h  main.c  report.c  report.h
.github/workflows/: gtest.yml
tests/: CMakeLists.txt  tests.cpp
